2009-01-13  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.csproj:
	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.csproj:
	* src/Core/Banshee.Services/Banshee.Services.csproj:
	* src/Backends/Banshee.Gnome/Banshee.Gnome.csproj:
	* src/Backends/Banshee.GStreamer/Banshee.GStreamer.csproj: Various fixes and 
	updates.

	* src/Libraries/Lastfm/Lastfm.csproj:
	* src/Libraries/Lastfm.Gui/Lastfm.Gui.csproj: Enable Makefile integration.

	* src/Libraries/Lastfm/Makefile.am:
	* src/Libraries/Lastfm.Gui/Makefile.am: Whitespace changes and re-ordering,
	to keep MonoDevelop happy, now that Makefile integration is enabled for these
	projects.

2009-01-12  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Equalizer.Gui/EqualizerWindow.cs:
	Patch to fix unlocalised text on Equalizer (BNC #447606)

2009-01-11  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.FileSystemQueue/Banshee.FileSystemQueue/FileSystemQueueSource.cs:
	Use SafeUri to unescape and get the file://-less path if possible, fixes
	bug with Firefox launching us with a file:// playlist URI (BNC #456120)

2009-11-01  Eoin Hennessy <eoin@randomrules.org>
	* build/osx/targets/bundle-30-gstreamer.targets: Re-add gst-plugins-ugly 
	to OSX build dependecies. The m3parse element is required for mp3 playback 
	with qtwrapper. We don't build *any* other elements from -ugly.

2009-01-11  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Lastfm/Lastfm/AudioscrobblerConnection.cs: Fix recently
	introduced bug that hung Banshee when Last.fm submitted Now Playing
	information (BNC #465215) 

2009-01-11  Aaron Bockover  <abock@gnome.org>

	This commit addresses BNC #461677, allowing device commands to be sent
	to a new or existing process. Device commands allow Banshee to perform
	actions against a device, such as activating the source in the UI or 
	starting playback of an Audio CD. Two .desktop files exist for Nautilus/GIO